--- a/siscop-caritas-ejb/pom.xml
+++ b/siscop-caritas-ejb/pom.xml
@@ -2,10 +2,10 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-    <artifactId>siscop-caritas</artifactId>
-    <groupId>sv.org.siscop.caritas</groupId>
-    <version>1.0</version>
-  </parent>
+        <artifactId>siscop-caritas</artifactId>
+        <groupId>sv.org.siscop.caritas</groupId>
+        <version>1.0</version>
+    </parent>
 
     <groupId>sv.org.siscop.caritas</groupId>
     <artifactId>siscop-caritas-ejb</artifactId>
@@ -38,6 +38,21 @@
             <version>7.0</version>
             <scope>provided</scope>
         </dependency>
+        <!-- dependency used for XLSX file format -->
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi-ooxml</artifactId>
+            <version>3.17</version>
+        </dependency>
+
+        <!-- dependency used for XLS older file format
+        (added for information) -->
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi</artifactId>
+            <version>3.17</version>
+        </dependency>
+
     </dependencies>
 
     <build>
