Ordenando mtto catalogo funcionando

--- a/pom.xml
+++ b/pom.xml
@@ -11,4 +11,8 @@
     <module>siscop-caritas-web</module>
     <module>siscop-caritas-ejb</module>
   </modules>
+    <properties>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+    </properties>
 </project>
