--- a/siscop-caritas-web/pom.xml
+++ b/siscop-caritas-web/pom.xml
@@ -43,6 +43,13 @@
             <artifactId>omega-menu</artifactId>
             <version>1.1</version>
         </dependency>   
+        
+        <!-- Omnifaces, develop JSF never easier without Omnifaces -->
+        <dependency>
+            <groupId>org.omnifaces</groupId>
+            <artifactId>omnifaces</artifactId>
+            <version>2.6.4</version>
+        </dependency>
     </dependencies>
 
     <build>
