--- a/siscop-caritas-web/src/main/webapp/WEB-INF/web.xml
+++ b/siscop-caritas-web/src/main/webapp/WEB-INF/web.xml
@@ -21,6 +21,10 @@
     </session-config>
     -->
     <context-param>
+        <param-name>facelets.SKIP_COMMENTS</param-name>
+        <param-value>true</param-value>
+    </context-param>
+    <context-param>
         <param-name>primefaces.FONT_AWESOME</param-name>
         <param-value>true</param-value>
     </context-param>
