--- a/siscop-caritas-web/pom.xml
+++ b/siscop-caritas-web/pom.xml
@@ -43,6 +43,11 @@
             <artifactId>omega-menu</artifactId>
             <version>1.1</version>
         </dependency>   
+        <dependency>
+            <groupId>org.webjars</groupId>
+            <artifactId>font-awesome</artifactId>
+            <version>4.7.0</version>
+        </dependency>
         
         <!-- Omnifaces, develop JSF never easier without Omnifaces -->
         <dependency>
