Avance, se mojo la laptop :(

--- a/siscop-caritas-web/src/main/webapp/WEB-INF/web.xml
+++ b/siscop-caritas-web/src/main/webapp/WEB-INF/web.xml
@@ -68,6 +68,6 @@
         <mime-type>application/x-font-eot</mime-type>
     </mime-mapping>
     <welcome-file-list>
-        <welcome-file>mattoActividades/mtto.xhtml</welcome-file>
+        <welcome-file>MttoCotizaciones.xhtml</welcome-file>
     </welcome-file-list>
 </web-app>
